<resources>
    <string name="app_name">BestPriceFinder</string>
    <string name="title_home">Home</string>
    <string name="title_list">Lists</string>
    <string name="title_scan">Scan</string>
    <string name="title_specials">Speciaux</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lists">ListsActivity</string>
</resources>
